# py-stats-toolkit

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW_RESPONSE.md  LICENSE  README.md  REFACTORING_DOCUMENTATION.md  REFACTORING_SUMMARY.md  SECURITY_SUMMARY.md  __init__.py  build_and_ready.py  check_pypi.py  clean_cache.py  create_release.py  deploy.bat  deploy.py  exemple_utilisation.py  fix_tests.py  install_dependencies.bat  install_dependencies.py  install_dependencies.sh  main.py  publish_all.py  publish_automated.py  py_stats_toolkit-0.1.0-py3-none-any.whl  pyproject.toml  release_and_publish.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  show_database_summary.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml  tests.yml
backup/: README.md  statistics.md
backup/gui/: genetic_optimizer_full_source_20250613.py  genetic_optimizer_gui.py
backup/statistics/: FrequenceAbsolueModule.py  MoyenneGlissanteModule.py  all_stat_modules.py  cycliques.py  fondamentaux.py  genetiques.py  hybrides.py  probabilistes.py  topologiques.py
docs/: 404.html  CNAME.example  README.md  api.rst  conf.py  contributing.rst  examples.md  exemples.rst  guide_utilisation.rst  index.html  index.rst  installation.rst  robots.txt  sitemap.xml  technical.md  usage.rst
docs/_build/html/: .buildinfo  api.html  exemples.html  genindex.html  guide_utilisation.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  exemples.doctree  guide_utilisation.doctree  index.doctree  installation.doctree
docs/_build/html/.doctrees/modules/: correlation.doctree  descriptives.doctree  probabilistes.doctree  regression.doctree  temporelle.doctree  tests.doctree  visualisation.doctree
docs/_build/html/_sources/: api.rst.txt  exemples.rst.txt  guide_utilisation.rst.txt  installation.rst.txt
docs/_build/html/_sources/modules/: probabilistes.rst.txt  temporelle.rst.txt  visualisation.rst.txt
docs/_build/html/modules/: correlation.html  descriptives.html  probabilistes.html  regression.html  temporelle.html  tests.html  visualisation.html
docs/modules/: correlation.rst  descriptives.rst  regression.rst  tests.rst
examples/: advanced_statistics_example.py  advanced_usage.py  basic_usage.py  example_usage.py  history_demo.py  utils_demo.py
genetic_lottery_optimizer/: __init__.py
genetic_lottery_optimizer/abstracts/: __init__.py  base.py
genetic_lottery_optimizer/core/: AbstractClassStatistics.py  abstract_module.py
genetic_lottery_optimizer/gui/: genetic_optimizer_full.py  genetic_optimizer_gui.py
genetic_lottery_optimizer/modules/: __init__.py  all_stat_modules.py  base.py  genetiques.py  hybrides.py  topologiques.py
genetic_lottery_optimizer/utils/: trainer.py
mes_libs/: setup.py
mes_libs/genetic/: __init__.py
mes_libs/ml/: __init__.py
mes_libs/stats/: __init__.py
mes_libs/utils/: __init__.py
py_stats_toolkit/: __init__.py
py_stats_toolkit-0.1.0.dist-info/: METADATA  RECORD
py_stats_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py_stats_toolkit/algorithms/: __init__.py  correlation.py  descriptive_stats.py  probability.py  regression.py  variance.py
py_stats_toolkit/biostats/: BioStatsModule.py
py_stats_toolkit/capsules/: BaseCapsule.py  __init__.py
py_stats_toolkit/core/: AbstractClassBase.py  AdvancedTimeSeriesModule.py  FractalModule.py  GameTheoryModule.py  GeneticAlgorithmModule.py  MarkovChainModule.py  NetworkAnalysisModule.py  RegressionModule.py  StatisticalModule.py  TestModule.py  TimeSeriesModule.py  VisualizationModule.py  __init__.py  base.py  validators.py
py_stats_toolkit/stats/: correlation.py  descriptives.py  regression.py
py_stats_toolkit/stats/correlation/: CorrelationModule.py
py_stats_toolkit/stats/descriptives/: MoyenneGlissanteModule.py
py_stats_toolkit/stats/factorielle/: FactorielleModule.py
py_stats_toolkit/stats/frequence/: FrequenceModule.py
py_stats_toolkit/stats/probabilistes/: ProbabilistesModule.py
py_stats_toolkit/stats/regression/: RegressionModule.py
py_stats_toolkit/stats/temporelle/: TimeSeriesModule.py
py_stats_toolkit/stats/variance/: VarianceModule.py
py_stats_toolkit/utils/: __init__.py  data_processor.py  parallel.py
py_stats_toolkit/visualization/: VisualizationModule.py
server/: README.md  config.py  main.py
tests/: test_abstracts.py  test_advanced.py  test_advanced_scoring.py  test_advanced_statistics.py  test_anomaly_detection.py  test_basic.py  test_basic_imports.py  test_biostats.py  test_correlation.py  test_descriptives.py  test_factorielle.py  test_fractal_module.py  test_frequence.py  test_game_theory_module.py  test_games.py  test_genetic_algorithm_module.py  test_history_functionality.py  test_markov_chain_module.py  test_network_analysis_module.py  test_parallel.py  test_probabilistes.py  test_refactored_modules.py  test_regression.py  test_regression_module.py  test_stats.py  test_temporal_validation.py  test_timeseries.py  test_utils.py  test_visualization.py  test_visualization_module.py
