[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-stats-toolkit"
version = "1.0.0"
description = "Un toolkit Python pour l'analyse statistique et le traitement des données"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Phoenix Project", email = "contact@phonxproject.onmicrosoft.fr"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Statistics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "deap>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "build>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/PhoenixGuardianTools/py-stats-toolkit"
Repository = "https://github.com/PhoenixGuardianTools/py-stats-toolkit.git"
Documentation = "https://py-stats-toolkit.readthedocs.io/"
"Bug Tracker" = "https://github.com/PhoenixGuardianTools/py-stats-toolkit/issues"

[tool.setuptools.packages.find]
include = ["py_stats_toolkit*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=py_stats_toolkit --cov-report=term-missing"

[tool.coverage.run]
source = ["py_stats_toolkit"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 