[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-stats-toolkit"
version = "1.0.5"
description = "Un toolkit Python pour l'analyse statistique et le traitement des données"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Phoenix Project", email = "autopublisher.ai@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Statistics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=3.0.0",
    "build>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/ThePhoenixAgency/py-stats-toolkit"
Repository = "https://github.com/ThePhoenixAgency/py-stats-toolkit.git"
Documentation = "https://py-stats-toolkit.readthedocs.io/"
"Bug Tracker" = "https://github.com/ThePhoenixAgency/py-stats-toolkit/issues"

[tool.setuptools.packages.find]
include = ["py_stats_toolkit*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=py_stats_toolkit --cov-report=term-missing"

[tool.coverage.run]
source = ["py_stats_toolkit"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]